feat: add redirect endpoint on swagger
